--- a/chess1/build.gradle
+++ b/chess1/build.gradle
@@ -38,3 +38,7 @@ tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
